--- a/0-exercices/corrections/exercice9/.gitlab-ci.yml
+++ b/0-exercices/corrections/exercice9/.gitlab-ci.yml
@@ -1,3 +1,8 @@
+# 
+# Le CI est tout juste une automatisation des tâches manuelles que vous effectuez en dev pour que votre code fonctionne correctement
+# En plus des tâches de base, on peut rajouter des tâches supplémentaires comme des tests, qualité, etc.
+#
+
 # ------------------------------------------ Ce qui était demandé, mais qui ne pouvait pas fonctionner à cause du fichier sass.dart qui ne peut pas être exécuté sur GitLab
 
 stages: 
@@ -42,8 +47,8 @@ sass:install: # tâche d'installation de sass (ce que vous avez fait manuellemen
 
 build:production: # tâche réservée à la production qui sera exécuté uniquement sur la branche main, vous pouvez appelez cette tâche comme bon vous semble
   stage: build # une tâche rattaché à l'étape build
-  script: # les scripts à exécuté, ici la compilation du scss en css compressé (suppression commentaires, espace etc. => fichier plus léger et rapide à charger pour l'environnement de production)
-    - ./node_modules/.bin/sass ${CSS} --style=compressed # à proprement dit notre script
+  script: # les scripts à exécuter, ici la compilation du scss en css compressé (suppression commentaires, espace etc. => fichier plus léger et rapide à charger pour l'environnement de production)
+    - ./node_modules/.bin/sass ${SCSS} ${CSS} --style=compressed # à proprement dit notre script
     # il peut y en avoir plusieurs juste après ici en commençant par -
   artifacts: # sert à garder les fichiers qu'on pourra récupérer depuis gitlab
     paths: # indique le chemin vers le dossier ou fichier à garder
